Fixed bug #48313 (fgetcsv() does not return null for empty rows)